--- a/slideshow.html
+++ b/slideshow.html
@@ -3,6 +3,11 @@
   <head>
     <style type="text/css">
       /* Slideshow styles */
+      img{
+        object-fit: contain;
+        width: 100%;
+        border: thin solid red;
+      }
     </style>
   </head>
   <body>
@@ -24,6 +29,8 @@ _This documents the time I spent learning canvas. The resources I used as well a
 
 Canvas is a [kibana plugin](https://www.elastic.co/guide/en/kibana/current/kibana-plugins.html) for visualizing data. It can be used for [Real Time Inforgraphics](https://www.elastic.co/elasticon/conf/2018/sf/creating-canvas-for-real-time-infographics-in-kibana), and Dashboards.
 
+__NOTE__: As of Fall 2018 Canvas is released as ***early access***
+
 according to [The Elastic Blog](https://www.elastic.co/blog/elasticon-kibana-canvas-story-elasticoffee)...
 
 > Currently available as a technology preview, __Canvas__ is a composable, extensible, creative space for live data. A great complement to Kibana dashboards, Canvas allows you to express your data in a highly polished way, whether it be in the boardroom, the NOC, or on your lobby displays
@@ -31,18 +38,15 @@ according to [The Elastic Blog](https://www.elastic.co/blog/elasticon-kibana-can
 ---
 ### The Coffee display from Elasticon 2018
 
-__The Coffee Display:__
-
 ![coffe display image](resources/elasticon-canvas-story-elasticoffee-image.jpg)
 
-__The Annotated Coffee Display:__
+---
+### The Annotated Coffee Display
 
 ![annotated coffe display image](resources/elasticon-canvas-story-elasticoffee-image-annotated.png)
 
 ---
 ### Always Up To Date Infographics
-
-__Current Status:__
 
 ![current status image](resources/canvas_example_1.png)
 
